--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "build-dev": "webpack-dev-server  --config webpack.dev.js --open"
   },
   "keywords": [],
-  "author": "",
+  "author": "Alaa Sayed",
   "license": "ISC",
   "description": "",
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "webpack": "^4.35.3",
+    "node-fetch": "^2.6.1",
+    "webpack": "^4.44.2",
     "webpack-cli": "^3.3.5"
   },
   "devDependencies": {
